changes to use bcryptpasswordencoder and cleared sonarlint issues have been added